--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h1>Hello World</h1>
     <a href="./src/first/index.html">First</a>
     <a href="./src/basic/index.html">Basic</a>
+    <a href="./src/airtable/index.html">Airtable</a>
   </body>
 </html>
