--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <a href="./src/first/index.html">First</a>
     <a href="./src/basic/index.html">Basic</a>
     <a href="./src/airtable/index.html">Airtable</a>
+    <a href="./src/votes/index.html">Votes</a>
   </body>
 </html>
