--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <a href="./src/basic/index.html">Basic</a>
     <a href="./src/airtable/index.html">Airtable</a>
     <a href="./src/votes/index.html">Votes</a>
+    <a href="./src/weather/index.html">Weather</a>
   </body>
 </html>
