--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
     <a href="./src/airtable/index.html">Airtable</a>
     <a href="./src/votes/index.html">Votes</a>
     <a href="./src/weather/index.html">Weather</a>
+    <a href="./src/letter/index.html">Letter</a>
+    <a href="./src/email/index.html">Email</a>
+    <a href="./src/stripe/index.html">Stripe</a>
   </body>
 </html>
